#7: :bug: Gutter was overflowing onto UI

--- a/styles/base.less
+++ b/styles/base.less
@@ -19,11 +19,7 @@
     // -------------------------------------
     //  Gutter
     // -------------------------------------
-        .gutter {
-            background: @color-midnight;
-            margin-right: 3px;
-            overflow: visible;
-            box-shadow: inset -1px 0 @color-charcoal_light; }
+        .gutter { background: @color-midnight; }
 
             .line-number {
                 color: @color-grey;
@@ -32,21 +28,11 @@
                     background: rgba(255, 255, 255, .04);
                     position: relative;
 
-                    &:after {
-                        content: '';
-                        background: rgba(255, 255, 255, @opacity-highlight);
-                        width: 4px; height: 100%;
-                        position: absolute;
-                        top: 0; right: -3px; bottom: 0; }
-                }
+                    box-shadow: inset -1px 0 0 rgba(255, 255, 255, @opacity-highlight + .07); }
 
                 &.cursor-line-no-selection {
                     background: rgba(0, 0, 0, .4);
-
-                    &:after {
-                        background: rgba(0, 0, 0, .3);
-                        width: 3px; }
-                }
+                    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .6); }
             }
 
     // -------------------------------------
@@ -61,8 +47,11 @@
                     box-shadow: inset 1px 0 @color-charcoal_light; }
             }
 
-            .line.cursor-line {
-                background: rgba(0, 0, 0, .3); }
+            .line {
+                border-left: 3px solid transparent;
+
+                &.cursor-line { background: rgba(0, 0, 0, .3); }
+            }
 
                 .invisible-character { color: @color-brown_dark; }
 
